[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "macos-private-api", "global-shortcut-all", "window-all", "clipboard-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard-master = "3.1.3"
arboard = "3.3.1"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
base64 = "0.13.0"
image = "0.24.8"
sled = "0.34.7"
chrono = "0.4.34"
once_cell = "1.8.0"
uuid = "1.7.0"
lazy_static = "1.4.0"
[target.'cfg(windows)'.dependencies]
windows  = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
